--- a/Formato Memoria/Agradecimientos.tex
+++ b/Formato Memoria/Agradecimientos.tex
@@ -1,4 +1,26 @@
 
 \begin{acknowledgment}
-    Agradecimientos a ...
+    Primeramente, quiero agradecer a Rodrigo Paredes por aceptarme como su estudiante memorista, entregándome todo su apoyo y disposición en este gran proceso que he dado en mi vida y la culminación de este. En todo momento me estuvo orientando, aconsejando y ayudando a generar resultados de calidad y profesional.
+
+    A Ruth Garrido, por aconsejarme y querer la mejor opción para salir adelante en este gran desafío de mi vida. Por su preocupación y apoyo en grandes dificultades que viví dentro de la carrera.
+
+    A Marcela Pacheco, por su gran labor en apoyarnos como estudiantes por cualquier situación que nos ocurriera. Por esas gratas conversaciones que a veces nos ayudaban salir de todo el estrés y nos alegraba la tarde.
+
+    Gracias a estas dos grandes mujeres que me apoyaron cuando fui dirigente estudiantil, por el apoyo, esfuerzo, la disposición, la pasión y organización que entregaban para las distintas actividades que realizábamos, fueran las mejores y que todos los estudiantes de la carrera disfrutáramos de ellas.
+
+    A Cristina Reyes que ha sido un pilar un gran pilar fundamental en todo instante, apoyándome, alentándome a seguir luchando por cumplir mis sueños, sobre todo cuando estaba muy desorientados. Gracias a su carisma, entusiasmo, un abrazo cuando más lo necesitamos y compartiendo también mis logros y alegrías. Muchas gracias por todo.
+
+    A los profesores José Letelier, Federico Meza, Rodolfo Allende, Luis Silvestre y Yamisleidy Salguero por confiar en mis capacidades y darme la oportunidad de cumplir uno de mis grandes logros de poder ser ayudante y poder entregar mis conocimientos a los alumnos.
+
+    A Fernanda Arenas, quien, si bien al inicio de la carrera nuestro compañerismo no fue del todo bueno, con el tiempo logramos ser los mejores amigos. Logre salir adelante arriesgándolo todo por como lo fue en Física que lo vivimos al extremo y un sin fin de módulos que tuvimos en conjunto a pesar de las diferentes carreras que estudiamos.
+
+    A Daniela Paredes, quien conocí a mitad de carrera y de ahí no nos separamos más. Al igual que con Fernanda, vivimos al extremo y estudiando hasta las últimas etapas a pesar de todas las trabas que se nos ponían en el camino. También por el gran apoyo que me brindo cunado fuimos dirigentes en el centro de alumnos y por lograr nuestra meta que era unir a la carrera.
+
+    Gracias al apoyo, compañerismo, amistad y trabajo en equipo de estas dos grandes mujeres, he logrado salir adelante de muchas batallas que daba por pedido, pero siempre estuvieron ahí cuando más lo necesitaba.
+
+    A Patricio Castro que es ha sido un gran amigo y compañero en todo mi proceso universitario, apoyándome y alentándome en todo instante.     
+
+    A mi hermano Gregory Sepúlveda por aguantarme estudiar y soñar con la materia, mi estrés y compartiendo tambien mis logros. Y finalmente a mis Padres, Patricia Manríquez y Sergio Sepúlveda, que han sido un pilar fundamental tanto en mi formación personal como profesional, apoyándome en cada etapa de mi vida, sacándose la mugre para ayudarme a cumplir mis sueños. Ellos han sido mi ejemplo a seguir de que todo es posible con paciencia, constancia, optimismo y esfuerzo. 
+
+
 \end{acknowledgment}
