--- a/Formato Memoria/Anexo2/Anexo_B_Funcionalidad.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_Funcionalidad.tex
@@ -4,14 +4,14 @@
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta5.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta5.1.png}
     \caption{\label{fig: Pregunta5}Resultado de la pregunta cinco.}
 \end{figure}
 
-\textbf{6.  ¿El sistema logra realizar una rendición fiable? (Siempre, A veces, nunca)}
+\textbf{6.  ¿El sistema logra realizar una Rendición fiable? (Siempre, A veces, nunca)}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta6.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta6.1.png}
     \caption{\label{fig: Pregunta6}Resultado de la pregunta seis.}
 \end{figure}
