--- a/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
@@ -1,16 +1,16 @@
-\textbf{1.  ¿Cree usted que es necesaria una herramienta que ayude a las OE a realizar el proceso de Solicitud de Fondo por Rendir?}
+\textbf{1.  ¿Cree usted que es necesaria una herramienta que ayude a las OE a realizar el proceso de Solicitud de Fondo?}
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[width=0.6\textwidth]{Imagenes/Pregunta1.png}
+        \includegraphics[width=0.6\textwidth]{Imagenes/Pregunta1.1.png}
         \caption{\label{fig: Pregunta1}Resultado de la pregunta uno.}
     \end{figure}
 \newpage
-\textbf{2.  ¿Cree usted que esta herramienta puede ayudar a reducir el tiempo que demanda realizar una rendición? (En escala de 1 (No es de ayuda) a 5 (Es de mucha ayuda))}
+\textbf{2.  ¿Cree usted que esta herramienta puede ayudar a reducir el tiempo que demanda realizar una Rendición? (En escala de 1 (No es de ayuda) a 5 (Es de mucha ayuda))}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta2.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta2.1.png}
     \caption{\label{fig: Pregunta2}Resultado de la pregunta dos.}
 \end{figure}
 
@@ -18,15 +18,15 @@
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta3.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta3.1.png}
     \caption{\label{fig: Pregunta3}Resultado de la pregunta tres.}
 \end{figure}
 
 \newpage
-\textbf{4.  ¿Cree usted que gracias a la aplicación se puede reducir la causa de rechazo de la Rendición? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}
+\textbf{4.  ¿Cree usted que gracias a la aplicación se puede reducir la causa de rechazo de una Rendición? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta4.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta4.1.png}
     \caption{\label{fig: Pregunta4}Resultado de la pregunta cuatro.}
 \end{figure}
