--- a/Formato Memoria/Capitulo5/5_Introduccion.tex
+++ b/Formato Memoria/Capitulo5/5_Introduccion.tex
@@ -1,1 +1,1 @@
-Después de realizar el estudio del contexto del problema, conocer los aspectos generales de la aplicación y junto con ello saber las historias de usuarios, las cuales se dieron a conocer en el \textbf{Capítulo \ref{sec:Caracteristica_Sistema}}, se procede a realizar el diseño de la aplicación. Éste busca definir el mapa de navegación, las interfaces de usuario, la arquitectura, el diagrama de clases y el modelo de datos. Esto se realiza con el fin de buscar una solución simple y rápida que satisfaga las necesidades del usuario de una forma comprensible para el desarrollo de la aplicación.
+Después de realizar el estudio del contexto del problema, conocer los aspectos generales de la aplicación y junto con ello saber las historias de usuarios, las cuales se dieron a conocer en el \textbf{Capítulo \ref{sec:Caracteristica_Sistema}}, se procede a realizar el diseño de la aplicación. Éste busca definir el mapa de navegación, las interfaces de usuario, la arquitectura, el diagrama de clases, el modelo de datos y el algoritmo que se utiliza seleccionar los documentos que se encuentran en la Rendición. Esto se realiza con el fin de buscar una solución simple y rápida que satisfaga las necesidades del usuario de una forma comprensible para el desarrollo de la aplicación.
