--- a/Formato Memoria/Capitulo6/6.4_Resultados.tex
+++ b/Formato Memoria/Capitulo6/6.4_Resultados.tex
@@ -1,25 +1,26 @@
-La encuesta cuenta con tres secciones y está dirigida a los Presidentes(as) y Secretarios(as) de Finanzas de cada OE. Previo a esta, los representantes tuvieron la oportunidad de probar el sistema. Cabe destacar que estas pruebas están enfocadas en el proceso de una Solicitud de Fondo por Rendir.
+La encuesta cuenta con tres secciones y está dirigida a los Presidentes(as) y Secretarios(as) de Finanzas de cada OE (con un total de 16 representantes encuestados). Previo a esta, los representantes tuvieron la oportunidad de probar el sistema. Cabe destacar que estas pruebas están enfocadas en el proceso de una Solicitud de Fondo.
 
 A continuación, se da a conocer el resumen de los resultados de cada sección de la encuesta.
 
 \paragraph{Sección de preguntas generales sobre el sistema}
 
-El 75\% de los representantes de las OE expresan que es necesaria una herramienta que ayude a asistir en el proceso de realizar una Solicitud de Fondo por Rendir. Por otra parte, el 56\% de los encuestados indican que el sistema ayudaría a reducir el tiempo que demanda realizar una Rendición.
+12 de 16 representantes de las OE expresan que es necesaria una herramienta que ayude a asistir en el proceso de realizar una Solicitud de Fondo, mientras que el resto opina lo contrario. Por otra parte, 9 de 16 de los encuestados indican que el sistema ayudaría a reducir el tiempo que demanda realizar una declaración de gasto, mientras que 7 de 16 confían en el sistema entre un 60\% a un 80\%.
 
-El 44\% de los encuestados indican que la mayoría de las personas pueden aprender a utilizar el sistema rápidamente, mientras que el resto demuestra ciertas dudas, pero aun así confía en el sistema.
+7 de 16 encuestados indican que la mayoría de las personas pueden aprender a utilizar el sistema rápidamente, mientras que el resto demuestra ciertas dudas, pero aun así confía en el sistema.
 
-Por último, el 63\% de los encuestados indican que la aplicación ayudaría a reducir la causa de rechazo de una Rendición, mientras que el resto reporta que no está completamente en acuerdo con esta afirmación, pero confían en el sistema entre un 60\% a un 80\%.
+Por último, 12 de 16 encuestados indican que la aplicación ayudaría a reducir la causa de rechazo de una declaración de gasto, mientras que el resto reporta que no está completamente en acuerdo con esta afirmación, pero confían en el sistema entre un 60\% a un 80\%.
 
 \paragraph{Sección de preguntas sobre las funcionalidades del sistema}
 
-El 75\% de los representantes de las OE indican que las funcionalidades del sistema son suficientes para que la aplicación sea útil para ellos. Por otra parte, al momento de realizar las pruebas existieron fallas al momento de realizar una rendición, las cuales fueron resueltas con posterioridad. Sin embargo, el 69\% de los representantes indica que la aplicación logra realizar una Rendición fiable.
+12 de 16 representantes de las OE indican que las funcionalidades del sistema son suficientes para que la aplicación sea útil para ellos. Por otra parte, al momento de realizar las pruebas existieron fallas al realizar una declaración de gastos, las cuales fueron resueltas con posterioridad. Sin embargo, el 11 de 16 representantes indica que la aplicación logra realizar una declaración de gastos fiable, mientras que el resto indica que solo a veces.
 
 \paragraph{Sección de preguntas sobre usabilidad e interfaz de usuario}
 
-El 63\% de los representantes indican que la aplicación es fácil de usar y que no requiere de instrucciones previas, mientras que el resto indican un pequeño desacuerdo. Por otra parte, el 62\% de los usuarios indican que la distribución de los elementos en la pantalla es adecuada, mientras que el resto no está completamente de acuerdo. Todo lo mencionado anteriormente se debe a que la aplicación, cuando se realizaron estas pruebas, estaba enfocada en la funcionalidad por sobre la interfaz, pero posteriormente se trabaja en las mejoras.
+13 de 16 representantes indican que la aplicación es fácil de usar y que no requiere de instrucciones previas, mientras que el resto indican un pequeño desacuerdo. Por otra parte, 14 de 16 usuarios indican que la distribución de los elementos en la pantalla es adecuada, mientras que el resto está de acuerdo entre un 60\% y 80\%.
 
-Por último, el 75\% de los representantes indican que el proceso completo de realizar una Solicitud de Fondo por Rendir es claro, mientras que el 25\% indican que la claridad de este proceso es de un 80\%.
+Por último, 12 de 16 representantes indican que el proceso completo de realizar una Solicitud de Fondo es claro, mientras que el resto indica que la claridad de este proceso es entre un 60\% y 80\%.
 
 Para más detalle sobre la encuesta realizada, se puede consultar en el \textbf{Anexo \ref{sec: Anexo_B}}.
 
-Cabe destacar que por razones de tiempo, para la versión final de esta memoria se realizará nuevamente este proceso de encuestas para incorporar la mejora de la interfaz al estudio.
+
+%Cabe destacar que por razones de tiempo, para la versión final de esta memoria se realizará nuevamente este proceso de encuestas para incorporar la mejora de la interfaz al estudio.
