--- a/Formato Memoria/Capitulo7/7_Conclusion.tex
+++ b/Formato Memoria/Capitulo7/7_Conclusion.tex
@@ -9,9 +9,16 @@ Tras realizar las diferentes pruebas a los usuarios de la aplicación, estos ind
 Para finalizar, este proyecto entrega un sistema funcional el cual puede ser utilizado por los distintos CCAA y la Federación de Estudiantes de la Universidad de Talca, Campus Los Niches, Curicó. Pero además existe trabajo futuro que es posible realizar con este Software los cuales son:
 
 \begin{itemize}
-    \item Hacer que las interfaces del sistema sean responsivas.
     \item Implementar el sistema de modo tal que pueda ser utilizado por los diferentes navegadores. Por ejemplo, Safari y Opera, entre otros.
     \item Implementación de funcionalidades para que Grupos Intermedios puedan realizar Solicitudes de Fondos por Rendir.
     \item Lanzar el sistema como una herramienta oficial para las OE de los demás Campus que pertenecen a la Casa de Estudios.
     \item Realizar pruebas de seguridad.
+    \item Listado para chequeo de los documentos que se deben adjuntar en la Rendición/Solicitud de reembolso.
+    \item Habilitar o deshabilitar Instituciones.
+    \item Habilitar o deshabilitar Campus.
+    \item Habilitar o deshabilitar Tipos de OE.
+    \item Habilitar o deshabilitar OE.
+    \item Habilitar o deshabilitar Categorías.
+    \item Realizar vista de resumen en donde se muestran indicadores tales como el número de solicitudes realizadas, procesos sin terminar, monto total utilizado del presupuesto anual, gráficos de gastos realizados por mes, entre otros.
+    \item Realizar vista de ayuda en donde se encuentre la RU de cómo realizar el proceso de solicitud de fondos, manual de usuario de la aplicación, preguntas frecuentes y contacto para informar cualquier problema que pueda tener la aplicación.
 \end{itemize}
