--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -25,7 +25,7 @@
     
     %Resultados: 2 a 5 lineas donde cuentan los resultados mas importantes de su memoria. Si pueden ponerle numeros al asunto mejor, pues es mas objetivo.
 
-    Luego de desarrollar la aplicación se realizan pruebas de caja negra para contrastar que se cumpla con los objetivos, y pruebas de usabilidad que se realizan a los clientes en donde el 75\% de ellos expresa que es una herramienta necesaria para asistir en el proceso de Solicitud de Fondo por Rendir. Por otra parte, el 63\% de los encuestados dicen que la aplicación ayudaría a reducir la causa de rechazo de una rendición.
+    Luego de desarrollar la aplicación se realizan pruebas de caja negra para contrastar que se cumpla con los objetivos, y pruebas de usabilidad que se realizan a los clientes en donde 12 de 16 de ellos expresa que es una herramienta necesaria para asistir en el proceso de Solicitud de Fondo. Por otra parte, 12 de 16 encuestados dicen que la aplicación ayudaría a reducir la causa de rechazo de una rendición.
 
     %Luego de desarrollar la aplicación y el uso de esta por parte de los clientes, el 75\% de ellos expresa que es una herramienta necesaria para asistir en el proceso de Solicitud de Fondo por Rendir. Por otra parte, el 63\% de los encuestados dicen que la aplicación ayudaría a reducir la causa de rechazo de una rendición.
     
