--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -15,6 +15,11 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+\usepackage{amssymb, amsmath, amsbsy}
+
+
 %---- Paquete para aliniación de texto verticalmente dentro de tablas
 \usepackage{array}
 %---- Paquetes para los pies de las tablas
@@ -45,7 +50,7 @@
 
 %% dedicatoria
 \begin{dedicatory}
-Dedicado a ...
+Dedicado a Patricia Manríquez y Sergio Sepúlveda, mis padres.
 \end{dedicatory}
 
 %% agradecimientos
@@ -242,6 +247,9 @@ Dedicado a ...
 
 	\section{Modelo Relacional}
 	\subfile{Capitulo5/5.5_Modelo_relacional}
+
+	\section{Algoritmo de solución}
+	\subfile{Capitulo5/5.6_Algoritmo}
 
 %% contenido del sexto capítulo
 \chapter{Construcción y validación}
