--- a/Formato Memoria/Anexo2/Anexo_B_Usabilidad.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_Usabilidad.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth]{Imagenes/Pregunta7.png}
+    \includegraphics[width=0.5\textwidth]{Imagenes/Pregunta7.1.png}
     \caption{\label{fig: Pregunta7}Resultado de la pregunta siete.}
 \end{figure}
 
@@ -12,7 +12,7 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth]{Imagenes/Pregunta8.png}
+    \includegraphics[width=0.5\textwidth]{Imagenes/Pregunta8.1.png}
     \caption{\label{fig: Pregunta8}Resultado de la pregunta ocho.}
 \end{figure}
 
@@ -21,15 +21,15 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta9.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta9.1.png}
     \caption{\label{fig: Pregunta9}Resultado de la pregunta nueve.}
 \end{figure}
 
-\textbf{10. ¿El proceso completo de realizar una Solicitud de Fondo por Rendir es claro?}
+\textbf{10. ¿El proceso completo de realizar una Solicitud de Fondo es claro?}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta10.png}
+    \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta10.1.png}
     \caption{\label{fig: Pregunta10}Resultado de la pregunta diez.}
 \end{figure}
 
