--- a/Formato Memoria/Glosario.tex
+++ b/Formato Memoria/Glosario.tex
@@ -70,6 +70,10 @@
 
 	\item 	\begin{description}
 			    \item[Visar:] Dicho de la autoridad competente: Dar validez a un pasaporte u otro documento para determinado uso~\cite{4}.
-			\end{description} 
+			\end{description}
+
+	\item 	\begin{description}
+			    \item[Principio de optimalidad:] aplicado en programación dinámica, consiste en que una secuencia óptima de decisiones que resuelve un problema, debe cumplir la propiedad de que cualquier subsecuencia de decisiones, que tenga el mismo estado final, debe ser también óptima respecto al subproblema correspondiente.~\cite{21}.
+			\end{description}  
 
 \end{glosario}
