--- a/Formato Memoria/refs.bib
+++ b/Formato Memoria/refs.bib
@@ -1,36 +1,3 @@
-/*Ejemplos de bibliografía*/
-
-@ARTICLE{lamport79,
-   AUTHOR = "Leslie Lamport",
-   TITLE = "How to make a multiprocessor computer that correctly executes multiprocess programs",
-   JOURNAL = "IEEE Transactions on Computers",
-   YEAR = "1979",
-   volume = "C-28",
-   number = "9",
-   month = sep,
-   pages = "690--691"
-}
-
-@ARTICLE{lamport78,
-   AUTHOR = "Leslie Lamport",
-   TITLE = "Time, clocks, and the ordering of events in a distributed system",
-   JOURNAL = "Communications of the ACM",
-   YEAR = "1978",
-   volume = "21",
-   number = "7",
-   month = jul,
-   pages = "558--565"
-}
-
-@INPROCEEDINGS{keleher92,
-   AUTHOR = "Peter Keleher and Alan L. Cox and Willy Zwaenepoel",
-   TITLE = "{Lazy Release Consistency for Software Distributed Shared Memory}",
-   BOOKTITLE = "19th Annual International Simposium on Computer Architecture, ACM",
-   month = may,
-   YEAR = "1992",
-   pages = "13--21"
-}
-
 /*Bibliografía del documento*/
 
 @MISC{1,
@@ -165,4 +132,21 @@
   title = {draw.io},
   howpublished = {https://www.draw.io/},
   note = {Última visita: 15 de mayo de 2019},
+}
+
+@MISC{21,
+  title = {Real Academia de IngenieríaIr a inicio},
+  howpublished = {http://diccionario.raing.es/es/lema/principio-de-optimalidad-de-bellman},
+  note = {Última visita: 15 de mayo de 2019},
+}
+
+@ARTICLE{22,
+  author = {Fernan},
+  title = {{6 Dynamic Programming}},
+  journal = {},
+  year = {2011},
+  volume = {},
+  pages = {1--31},
+  number = {},
+  note = {Última visita: 15 de mayo de 2019}
 }
