--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -19,7 +19,7 @@
     %Existen tres tipos de Organizaciones Estudiantiles las cuales son: Federación de Estudiantes, Centros de Alumnos y Grupos Intermedios. Pero esta herramienta está enfocada para que asista en el proceso de Solicitud de Fondos por Rendir para las dos primeras Organizaciones.
    
     %Desarrollo: 3 a 5 lineas explicando como resolviste el problema.
-    Como primer paso, se realizan encuestas a los clientes con el fin de obtener las características del sistema a desarrollar y el modelo de contexto del mecanismo actual de rendiciones. Luego, estas características son categorizadas de acuerdo con la utilidad que presta (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, el diseño de interfaces, la arquitectura y el modelo relacional del sistema.
+    Como primer paso, se realizan encuestas a los clientes con el fin de obtener las características del sistema a desarrollar y el modelo de contexto del mecanismo actual de rendiciones. Luego, estas características son categorizadas de acuerdo con la utilidad que presta (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, el diseño de interfaces, la arquitectura, el modelo relacional del sistema y el algoritmo de solución.
 
     %Para resolver el problema se realizan encuestas a los clientes con el fin de obtener las características del sistema y el modelo de contexto para la mayor comprensión del actual sistema. Luego, estas características son categorizadas de acuerdo con la utilidad que preste (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, diseño de interfaz, la arquitectura y el modelo relacional del sistema. 
     
