--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -50,7 +50,7 @@
 
 %% dedicatoria
 \begin{dedicatory}
-Dedicado a Patricia Manríquez y Sergio Sepúlveda, mis padres.
+Dedicado a Patricia Manríquez Lisboa y Sergio Sepúlveda Leal, mis padres.
 \end{dedicatory}
 
 %% agradecimientos
